--- a/README
+++ b/README
@@ -1,13 +1,12 @@
 ```markdown
 # cub3D
 **A Raycasting-Based 3D Maze Explorer Inspired by Wolfenstein 3D**
-![Screenshot 6 - 3D Maze View](imgs/screenshots/help.png)
-![Screenshot 1 - 3D Maze View](imgs/screenshots/1.png)
-![Screenshot 2 - 3D Maze View](imgs/screenshots/2.png)
-![Screenshot 3 - 3D Maze View](imgs/screenshots/3.png)
-![Screenshot 4 - 3D Maze View](imgs/screenshots/4.png)
-![Screenshot 5 - 3D Maze View](imgs/screenshots/5.png)
-
+![Screenshot 6 - 3D Maze View](./imgs/screenshots/help.png)
+![Screenshot 1 - 3D Maze View](./imgs/screenshots/1.png)
+![Screenshot 2 - 3D Maze View](./imgs/screenshots/2.png)
+![Screenshot 3 - 3D Maze View](./imgs/screenshots/3.png)
+![Screenshot 4 - 3D Maze View](./imgs/screenshots/4.png)
+![Screenshot 5 - 3D Maze View](./imgs/screenshots/5.png)
 ---
 
 ## 🔍 Description
