--- a/README
+++ b/README
@@ -1,12 +1,12 @@
 
 # cub3D
 **A Raycasting-Based 3D Maze Explorer Inspired by Wolfenstein 3D**
-![Screenshot 6 - 3D Maze View](./imgs/screenshots/help.png)
-![Screenshot 1 - 3D Maze View](./imgs/screenshots/1.png)
-![Screenshot 2 - 3D Maze View](./imgs/screenshots/2.png)
-![Screenshot 3 - 3D Maze View](./imgs/screenshots/3.png)
-![Screenshot 4 - 3D Maze View](./imgs/screenshots/4.png)
-![Screenshot 5 - 3D Maze View](./imgs/screenshots/5.png)
+<img align="center" src="imgs/screenshots/help.png" alt="Screenshot of the game" />
+<img align="center" src="imgs/screenshots/1.png" alt="Screenshot of the game" />
+<img align="center" src="imgs/screenshots/2.png" alt="Screenshot of the game" />
+<img align="center" src="imgs/screenshots/3.png" alt="Screenshot of the game" />
+<img align="center" src="imgs/screenshots/5.png" alt="Screenshot of the game" />
+<img align="center" src="imgs/screenshots/4.png" alt="Screenshot of the game" />
 ---
 
 ## 🔍 Description
