--- a/README
+++ b/README
@@ -1,12 +1,12 @@
 
 # cub3D
 **A Raycasting-Based 3D Maze Explorer Inspired by Wolfenstein 3D**
-<img align="center" src="imgs/screenshots/help.png" alt="Screenshot of the game" />
-<img align="center" src="imgs/screenshots/1.png" alt="Screenshot of the game" />
-<img align="center" src="imgs/screenshots/2.png" alt="Screenshot of the game" />
-<img align="center" src="imgs/screenshots/3.png" alt="Screenshot of the game" />
-<img align="center" src="imgs/screenshots/5.png" alt="Screenshot of the game" />
-<img align="center" src="imgs/screenshots/4.png" alt="Screenshot of the game" />
+<img align="center" src="help.png" alt="Screenshot of the game" />
+<img align="center" src="1.png" alt="Screenshot of the game" />
+<img align="center" src="/2.png" alt="Screenshot of the game" />
+<img align="center" src="3.png" alt="Screenshot of the game" />
+<img align="center" src="5.png" alt="Screenshot of the game" />
+<img align="center" src="4.png" alt="Screenshot of the game" />
 ---
 
 ## 🔍 Description
